# simple-power-logger

./: .gitignore  CMakeLists.txt  extract_data.py  main.cpp
